# fishsense-api-workflow-worker

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.develop  README.md  alembic.ini  docker-compose.develop.yml  pyproject.toml  settings.toml
.devcontainer/: devcontainer.json
fishsense_api_workflow_worker/: worker.py
fishsense_api_workflow_worker/workflows/: read_label_studio_labels.py
pg_volumes/config/: pg_hba.conf
pg_volumes/scripts/: CREATE_DATABASES.sql
scripts/: add_dive_slates.ipynb  initialize-database.ipynb  label-studio-head-tail-test.ipynb  label-studio-laser-test.ipynb  label-studio-test.ipynb  migrate-database.ipynb  update-completed-tags.ipynb  update-laser-labels-float.ipynb  update-laser-labels.ipynb  update_camera_ids.ipynb  users.ipynb
src/fishsense_api_workflow_worker/: __init__.py  __main__.py  config.py  database.py  sql_utils.py  worker.py
src/fishsense_api_workflow_worker/activities/: collect_label_studio_head_tail_labels.py  collect_label_studio_laser_labels.py  collect_label_studio_users.py  insert_head_tail_labels_into_postgres.py  insert_laser_labels_into_postgres.py  insert_users_into_postgres.py  read_label_studio_laser_labels.py  sync_label_studio_head_tail_labels.py  sync_label_studio_laser_labels.py  sync_users_into_postgres.py
src/fishsense_api_workflow_worker/alembic/: README  env.py
src/fishsense_api_workflow_worker/models/: camera.py  dive.py  head_tail_label.py  image.py  laser_label.py  priority.py  user.py
src/fishsense_api_workflow_worker/workflows/: read_label_studio_head_tail_labels.py  utils.py  (+1 more)
