[project]
name = "fishsense-api-workflow-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.15.0",
]

[project.scripts]
fishsense_api_workflow_worker = "fishsense_api_workflow_worker.worker:run"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"